fix the spacing of addToCart and form buttons

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -132,7 +132,7 @@ footer {
     flex-wrap: wrap;
 }
 
-.btn {
+.form-btn {
     padding: .9em 0 !important;
 }
 
